Styles of dropdown on small screens corrected

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -28,15 +28,6 @@
   text-align: center;
 }
 
-/* .Searching::first-letter {
-  font-family: serif;
-  font-weight: bold;
-  color: #212121;
-  font-size: 40px;
-  text-decoration: none;
-  text-align: center;
-} */
-
 .Favourites {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
@@ -138,14 +129,6 @@
     padding: 5px;
     text-align: center;
   }
-  /* .Searching::first-letter {
-    font-family: serif;
-    font-weight: bold;
-    color: #212121;
-    font-size: 16px;
-    text-decoration: none;
-    text-align: center;
-  } */
   .Favourites {
     font-family: "Oswald", sans-serif;
     font-weight: bold;
@@ -201,7 +184,7 @@
   }
   .Input2 {
     border-radius: 50px;
-    height: 20px;
+    height: 32px;
     background-color: lightgrey;
     width: 50%;
   }
@@ -226,14 +209,6 @@
     color: #212121;
     text-decoration: underline;
     padding: 5px;
-    text-align: center;
-  }
-  .Searching::first-letter {
-    font-family: serif;
-    font-weight: bold;
-    color: #212121;
-    font-size: 16px;
-    text-decoration: none;
     text-align: center;
   }
   .Favourites {
